Use Collection factory methods where possible